# cmake-findopencl

./: FindOpenCL.cmake
example/: CMakeLists.txt  example.cpp
